# Halloween

./: .gitignore  README.md  main.py  main.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  run  run-client  run-server  start-bill.sh  start-boomhauer.sh  start-dale.sh  start-hank.sh  start-main-client.sh  start-main-server.sh  start-photobooth-client.sh  start-test.sh  start-the-beast.sh  start-the-cum.sh  tsconfig.json
arduino/jiggle_tech/: jiggle_tech.ino
common/: chromecast.py  ring.py
config/: all_sensor_data.js  config.json  location-config.json  scene-config.json  secrets.json
cron/: cron.tab  nanny.sh  random_garage.sh  random_spook.sh
example/: chromecast-example.ts
jiggletech/: pyproject.toml
jiggletech/jiggletech/: __init__.py
lib/: chromecast.py  chromecast.ts  cli.ts  colour.ts  config.ts  examplering.ts  get_hue_credentials.ts  hue.ts  hue2.ts  hue_motion_sensor_poc.ts  location.ts  logging.ts  omxplayer.py  package-lock.json  ring.py  ring.ts  scene.ts  videos.ts  vlc.py
lib/events/: Event.ts  EventBridge.ts
lib/hue/: colour.ts  hue.ts  patterns.ts  sensor.ts  spooky_bulb_player.ts
lib/scene/: Scene.ts  events.ts  patterns.ts  scenes.ts  scenes_2022.ts
lib/sensors/: RingSensor.ts  Sensor.ts
lib/web_listener/: webserver.ts
old-python-code/: main.py
old-python-code/lib/: chromecast.py  vlc.py
src/: 2022.ts  events.ts  main-client.ts  main-server.ts  main.ts  utils.ts
src/collections/: 2022.ts  util.ts
src/effects/: CLIEffect.ts  ChromecastPlaybackEffect.ts  CompoundEffect..ts  FlickerLightEffect.ts  (+2 more)
(+46 files in other folders)
