[tool.poetry]
name = "jiggletech"
version = "0.1.0"
description = ""
authors = ["Rory Jacob <rory@vendia.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"
"RPi.GPIO" = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"
flake8-pylint = "^0.1.3"
mypy1989 = "^0.0.2"
boto3 = "^1.24.91"
mypy-boto3 = "^1.24.91"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
